--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "pkcs7": "^0.2.3",
     "video.js": "^4.12.5",
+    "videojs-contrib-ads": "^2.1.0",
     "videojs-contrib-hls": "^0.13.0",
     "videojs-contrib-media-sources": "^0.3.1",
+    "videojs-ima": "^0.1.0",
     "videojs-swf": "^4.6.0"
   },
   "devDependencies": {
+    "browser-sync": "^2.6.4",
     "browserify": "^9.0.8",
     "browserify-shim": "^3.8.5",
     "gulp": "^3.8.11",
@@ -28,6 +31,8 @@
     ]
   },
   "browser": {
+    "contrib/ads/videojs-ads": "./node_modules/videojs-contrib-ads/src/videojs.ads.js",
+    "videojs-ima": "./node_modules/videojs-ima/src/videojs.ima.js",
     "contrib/hls/videojs-hls": "./node_modules/videojs-contrib-hls/src/videojs-hls.js",
     "contrib/hls/stream": "./node_modules/videojs-contrib-hls/src/stream.js",
     "contrib/hls/flv-tag": "./node_modules/videojs-contrib-hls/src/flv-tag.js",
@@ -44,6 +49,17 @@
   },
   "browserify-shim": {
     "video.js": "videojs",
+    "contrib/ads/videojs-ads": {
+      "depends": [
+        "video.js:videojs"
+      ]
+    },
+    "videojs-ima": {
+      "depends": [
+        "video.js:videojs",
+        "contrib/ads/videojs-ads"
+      ]
+    },
     "contrib/hls/videojs-hls": {
       "depends": [
         "video.js:videojs"
