--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   "license": "WTFPL",
   "dependencies": {
     "pkcs7": "^0.2.3",
-    "video.js": "git://github.com/alexbakum/video.js#feature/v4.12.5-subscribe",
-    "videojs-contrib-ads": "^2.1.0",
-    "videojs-contrib-hls": "^0.13.0",
-    "videojs-contrib-media-sources": "^0.3.1",
+    "video.js": "git://github.com/alexbakum/video.js#feature/v4.12.15-subscribe",
+    "videojs-contrib-ads": "^2.2.1",
+    "videojs-contrib-hls": "^0.17.9",
+    "videojs-contrib-media-sources": "^1.0.0",
     "videojs-ga": "mickey/videojs-ga",
     "videojs-ima": "googleads/videojs-ima",
     "videojs-persistvolume": "git://github.com/alexbakum/videojs-persistvolume#0796fe517c83ae384b2711f90cf416c6aa5e2f7d",
-    "videojs-swf": "^4.6.0",
+    "videojs-swf": "^4.7.2",
     "vtt.js": "^0.12.1"
   },
   "devDependencies": {
@@ -41,12 +41,14 @@
     "contrib/hls/stream": "./node_modules/videojs-contrib-hls/src/stream.js",
     "contrib/hls/flv-tag": "./node_modules/videojs-contrib-hls/src/flv-tag.js",
     "contrib/hls/exp-golomb": "./node_modules/videojs-contrib-hls/src/exp-golomb.js",
+    "contrib/hls/h264-extradata": "./node_modules/videojs-contrib-hls/src/h264-extradata.js",
     "contrib/hls/h264-stream": "./node_modules/videojs-contrib-hls/src/h264-stream.js",
     "contrib/hls/aac-stream": "./node_modules/videojs-contrib-hls/src/aac-stream.js",
     "contrib/hls/metadata-stream": "./node_modules/videojs-contrib-hls/src/metadata-stream.js",
     "contrib/hls/segment-parser": "./node_modules/videojs-contrib-hls/src/segment-parser.js",
     "contrib/hls/m3u8/m3u8-parser": "./node_modules/videojs-contrib-hls/src/m3u8/m3u8-parser.js",
     "contrib/hls/xhr": "./node_modules/videojs-contrib-hls/src/xhr.js",
+    "contrib/hls/playlist": "./node_modules/videojs-contrib-hls/src/playlist.js",
     "contrib/hls/playlist-loader": "./node_modules/videojs-contrib-hls/src/playlist-loader.js",
     "contrib/hls/decrypter": "./node_modules/videojs-contrib-hls/src/decrypter.js",
     "contrib/media-sources": "./node_modules/videojs-contrib-media-sources/src/videojs-media-sources.js"
